--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,4 +1,7 @@
 
+include:
+  - ../unitycatalog/compose.yaml
+
 services:
   python:
     build:
@@ -7,10 +10,3 @@ services:
     volumes:
       - ..:/workspace:cached
     command: /bin/sh -c "while sleep 1000; do :; done"
-
-  # unitycatalog:
-  #   build:
-  #     context: .
-  #     dockerfile: ../unitycatalog/Dockerfile
-  #   ports:
-  #     - "3000:3000"
