--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -74,15 +74,15 @@
 				"terminal.integrated.shell.linux": "/bin/bash"
 			},
 			"extensions": [
-				// "ms-python.python",
-				// "rokoroku.vscode-theme-darcula",
-				// "tamasfe.even-better-toml",
-				// "github.vscode-github-actions",
-				// "GitHub.copilot",
-				// "PKief.material-icon-theme",
-				// "charliermarsh.ruff",
-				// "redhat.vscode-yaml",
-				// "aaron-bond.better-comments"
+				"ms-python.python",
+				"rokoroku.vscode-theme-darcula",
+				"tamasfe.even-better-toml",
+				"github.vscode-github-actions",
+				"GitHub.copilot",
+				"PKief.material-icon-theme",
+				"charliermarsh.ruff",
+				"redhat.vscode-yaml",
+				"aaron-bond.better-comments"
 			]
 		}
 	},
