ignoring unity catalog integration for now as it proves difficult to set up properly

--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,7 +1,7 @@
 
-include:
-  - path:
-    - ../unitycatalog/compose.yaml
+# include:
+#   - path:
+#     - ../unitycatalog/compose.yaml
 
 services:
   python:
